--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+  background-image: linear-gradient(to bottom, rgba(252, 119, 186, 0.754), rgba(255, 238, 252, 0.404));
+  /* background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));  */
 }
